<?xml version="1.0" encoding="UTF-8"?>
<!--
	This file is part of Android-CWG.

	Android-CWG is free software: you can redistribute it and/or modify
	it under the terms of the GNU General Public License as published by
	the Free Software Foundation, either version 3 of the License, or
	(at your option) any later version.

	Android-CWG is distributed in the hope that it will be useful,
	but WITHOUT ANY WARRANTY; without even the implied warranty of
	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
	GNU General Public License for more details.

	You should have received a copy of the GNU General Public License
	along with Android-CWG.  If not, see <http://www.gnu.org/licenses/>.
-->

<resources>
	<string name="app_name">Czech Wood Geocoin</string>
	<string name="main_activity">CWG</string>
	<string name="main_activity_duplicity">CWG - Duplicity</string>
	<string name="main_activity_without_catalog">CWG - Without catalog</string>
	<string name="preference_activity">CWG - Preferences</string>
	<string name="statistics_activity">CWG - Statistics</string>
	<string name="show_activity">CWG - Detail</string>

	<string name="pref_auto_show_cwg">true</string>
	<string name="pref_download_images">true</string>
	<string name="pref_catalog_use_zip">true</string>
	<string name="pref_catalog_url">http://cwg.maxinoha.cz/cwg.xml</string>
	<string name="pref_catalog_zip_url">http://cwg.maxinoha.cz/cwgxml.zip</string>
	<string name="pref_image_url">http://cwg.maxinoha.cz/img/</string>

	<string name="search">Search</string>
	<string name="show">Show</string>
	<string name="add_same">Add same</string>
	<string name="add_other_version">Add other version</string>
	<string name="rename">Rename</string>
	<string name="copy">Copy</string>
	<string name="delete">Delete</string>
	<string name="delete_cwg">Delete CWG?</string>
	<string name="are_you_sure_delete_cwg">Are you sure delete this CWG?</string>
	<string name="remove_one">Remove one</string>
	<string name="merge">Merge</string>
	<string name="all">All</string>
	<string name="duplicity">Duplicity</string>
	<string name="without_catalog">Without catalog</string>
	<string name="import_">Import</string>
	<string name="export">Export</string>
	<string name="import_catalog">Import catalog</string>
	<string name="import_text">Import text</string>
	<string name="export_text">Export text</string>
	<string name="import_csv">Import CSV</string>
	<string name="export_csv">Export CSV</string>
	<string name="export_web">Export to web</string>
	<string name="preference">Preferences</string>
	<string name="auto_merge">Auto-merge</string>
	<string name="auto_merging">Auto-merging</string>
	<string name="erase_db">Erase DB</string>
	<string name="erase_database">Erase database?</string>
	<string name="are_you_sure_clean_whole_db">Are you sure clean whole DB?</string>
	<string name="statistics">Statistics</string>
	<string name="collection">Collection</string>
	<string name="unique">Unique</string>
	<string name="sum">Sum</string>
	<string name="total_">Total:</string>
	<string name="with_catalog_">With catalog:</string>
	<string name="without_catalog_">Without catalog:</string>
	<string name="duplicity_">Duplicity:</string>
	<string name="catalog_">Catalog:</string>
	<string name="importing">Importing</string>
	<string name="exporting">Exporting</string>
	<string name="uploading">Uploading</string>
	<string name="export_finished">Export finished</string>
	<string name="import_finished">Import finished</string>
	<string name="please_wait">Please wait...</string>
	<string name="title">Title:</string>
	<string name="catalog_title">Catalog title:</string>
	<string name="catalog_id">Catalog ID:</string>
	<string name="count">Count:</string>
	<string name="image">Image:</string>
	<string name="cant_merge_both_have_catalog">Can\'t merge this CWGs - both have catalog ID</string>
	<string name="cant_remove_zero">Can\'t remove zero CWG</string>
	<string name="cant_import_duplicity">Can\'t import duplicate CWG</string>
	<string name="cant_open_external_storage">Can\'t open external storage</string>
	<string name="cant_open_file">Can\'t open file:</string>
	<string name="auto_show_cwg">Auto CWG show</string>
	<string name="download_images">Download images</string>
	<string name="catalog_use_zip">Use ZIP catalog</string>
	<string name="catalog_url">Catalog URL</string>
	<string name="catalog_zip_url">Catalog ZIP URL</string>
	<string name="image_url">Image URL</string>
	<string name="web_export_url">Web export URL</string>
	<string name="web_export_token">Web export token</string>
	<string name="url_is_not_set">URL is not set</string>
	<string name="token_is_not_set">Token is not set</string>
</resources>
