<?xml version="1.0" encoding="UTF-8"?>
<!--
	This file is part of Android-CWG.

	Android-CWG is free software: you can redistribute it and/or modify
	it under the terms of the GNU General Public License as published by
	the Free Software Foundation, either version 3 of the License, or
	(at your option) any later version.

	Android-CWG is distributed in the hope that it will be useful,
	but WITHOUT ANY WARRANTY; without even the implied warranty of
	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
	GNU General Public License for more details.

	You should have received a copy of the GNU General Public License
	along with Android-CWG.  If not, see <http://www.gnu.org/licenses/>.
-->

<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android">
	<CheckBoxPreference
		android:key="auto_open_cwg"
		android:title="@string/auto_open_cwg"
		android:defaultValue="@string/pref_auto_open_cwg"
		/>
	<CheckBoxPreference
		android:key="download_images"
		android:title="@string/download_images"
		android:defaultValue="@string/pref_download_images"
		/>
	<CheckBoxPreference
		android:key="catalog_use_zip"
		android:title="@string/catalog_use_zip"
		android:defaultValue="@string/pref_catalog_use_zip"
		/>
	<EditTextPreference
		android:key="catalog_url"
		android:title="@string/catalog_url"
		android:defaultValue="@string/pref_catalog_url"
		/>
	<EditTextPreference
		android:key="catalog_zip_url"
		android:title="@string/catalog_zip_url"
		android:defaultValue="@string/pref_catalog_zip_url"
		/>
	<EditTextPreference
		android:key="image_url"
		android:title="@string/image_url"
		android:defaultValue="@string/pref_image_url"
		/>
	<EditTextPreference
		android:key="web_export_url"
		android:title="@string/web_export_url"
		android:defaultValue=""
		/>
	<EditTextPreference
		android:key="web_export_token"
		android:title="@string/web_export_token"
		android:defaultValue=""
		/>
</PreferenceScreen>
