<?xml version="1.0" encoding="UTF-8"?>
<!--
	This file is part of Android-CWG.

	Android-CWG is free software: you can redistribute it and/or modify
	it under the terms of the GNU General Public License as published by
	the Free Software Foundation, either version 3 of the License, or
	(at your option) any later version.

	Android-CWG is distributed in the hope that it will be useful,
	but WITHOUT ANY WARRANTY; without even the implied warranty of
	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
	GNU General Public License for more details.

	You should have received a copy of the GNU General Public License
	along with Android-CWG.  If not, see <http://www.gnu.org/licenses/>.
-->

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="1">

    <TableRow>
        <TextView
            android:text="@string/collection"
            android:layout_column="1"
			android:textStyle="bold"
            />
        <TextView
            android:text="@string/unique"
            android:gravity="right"
			android:paddingRight="10dp"
            />
        <TextView
            android:text="@string/sum"
            android:gravity="right"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_column="1"
            android:text="@string/total_"
            />
        <TextView
			android:id="@+id/stats_own_cwg"
            android:gravity="right"
			android:paddingRight="10dp"
            />
        <TextView
			android:id="@+id/stats_own_cwg_sum"
            android:gravity="right"
            />
    </TableRow>
	<TableRow>
        <TextView
            android:layout_column="1"
            android:text="@string/with_catalog_"
            />
        <TextView
			android:id="@+id/stats_own_cwg_with_catalog"
            android:gravity="right"
			android:paddingRight="10dp"
            />
        <TextView
			android:id="@+id/stats_own_cwg_sum_with_catalog"
            android:gravity="right"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_column="1"
            android:text="@string/without_catalog_"
            />
        <TextView
			android:id="@+id/stats_own_cwg_without_catalog"
            android:gravity="right"
			android:paddingRight="10dp"
            />
        <TextView
			android:id="@+id/stats_own_cwg_sum_without_catalog"
            android:gravity="right"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_column="1"
            android:text="@string/duplicity_"
            />
        <TextView
			android:id="@+id/stats_own_cwg_duplicity"
            android:gravity="right"
			android:paddingRight="10dp"
            />
        <TextView
			android:id="@+id/stats_own_cwg_sum_duplicity"
            android:gravity="right"
            />
    </TableRow>
	
	<View
        android:layout_height="12dp"
	/>
	
    <TableRow>
        <TextView
            android:layout_column="1"
            android:text="@string/catalog_"
            />
        <TextView
            android:gravity="right"
			android:paddingRight="10dp"
            />
        <TextView
			android:id="@+id/stats_cwg_catalog"
            android:gravity="right"
            />
    </TableRow>
</TableLayout>