<?xml version="1.0" encoding="UTF-8"?>
<!--
	This file is part of Android-CWG.

	Android-CWG is free software: you can redistribute it and/or modify
	it under the terms of the GNU General Public License as published by
	the Free Software Foundation, either version 3 of the License, or
	(at your option) any later version.

	Android-CWG is distributed in the hope that it will be useful,
	but WITHOUT ANY WARRANTY; without even the implied warranty of
	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
	GNU General Public License for more details.

	You should have received a copy of the GNU General Public License
	along with Android-CWG.  If not, see <http://www.gnu.org/licenses/>.
-->

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="1">
    <TableRow>
        <TextView
            android:layout_column="1"
            android:text="@string/title"
            />
        <TextView
			android:id="@+id/show_title"
            android:gravity="right"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_column="1"
            android:text="@string/catalog_title"
            />
        <TextView
			android:id="@+id/show_catalog_title"
            android:gravity="right"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_column="1"
            android:text="@string/catalog_id"
            />
        <TextView
			android:id="@+id/show_catalog_id"
            android:gravity="right"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_column="1"
            android:text="@string/count"
            />
        <TextView
			android:id="@+id/show_count"
            android:gravity="right"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_column="1"
            android:text="@string/image"
            />
		<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:gravity="right">
			<ProgressBar
				android:id="@+id/imageProgress"
				android:layout_width="150px"
				android:layout_height="150px"
				android:visibility="gone"
				/>
			<ImageView
				android:id="@+id/image"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:visibility="gone"
				/>
		</LinearLayout>
    </TableRow>
</TableLayout>
